# lipsa

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20250527_0001_initial_lipsa_schema.py  20250528_0002_add_job_purpose_and_source.py
design/: design-doc-08598f72.md  design-review-08598f72.md  design-summary-08598f72.md
docs/: LEGAL_RISK_REDUCTION.md
src/lipsa/: __init__.py  config.py
src/lipsa/cli/: main.py
src/lipsa/exporters/: __init__.py  base.py  csv.py  excel.py  json.py  parquet.py
src/lipsa/importers/: __init__.py  base.py  sales_navigator.py
src/lipsa/legal/: disclaimer.py
src/lipsa/models/: __init__.py  job.py  post.py
src/lipsa/scheduler/: __init__.py  aps.py
src/lipsa/scrapers/: __init__.py  apify.py  base.py
src/lipsa/storage/: __init__.py  db.py  models.py  repositories.py
tests/: test_legal.py  test_scrapers.py  test_storage.py
